--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "build:static": "BUILD_STATIC=true next build",
     "start": "next start",
-    "export": "next build && next export",
+    "export": "BUILD_STATIC=true next build",
     "lint": "next lint",
     "type-check": "tsc --noEmit",
-    "deploy:vercel": "vercel --prod",
-    "deploy:netlify": "netlify deploy --prod --dir=.next"
+    "deploy:vercel": "next build && vercel --prod",
+    "deploy:netlify": "next build && netlify deploy --prod --dir=.next",
+    "deploy:static": "BUILD_STATIC=true next build && echo 'Static build complete in .next/out'"
   },
   "dependencies": {
     "next": "14.2.5",
